feat(test): add runnable web demo application (4 tabs: compile / aspect / bean / runtime)
test 模块加 src/main，把 dynamic-loader-utility 三大能力 + DynamicRuntime
高级门面拼到 4 个 tab 里，浏览器 + curl 即可端到端验证。

- DemoApp：cn.wubo.dynamic.loader.utility.demo 包下的 @SpringBootApplication 启动器
- InstanceRegistry：@Component，集中管理实例/代理/session 状态
- CompileController：/api/compile/load + invoke + instances
- AspectController：/api/aspect/proxy + invoke（adviceType: log/timing/throw）
- BeanController：/api/bean/register + unregister + list（路由探测用反射避开
  RequestMappingInfo.getPatternsCondition 在 Spring 6 下返回 null 的坑）
- RuntimeController：/api/runtime/sessions（POST/GET/DELETE）+ session 内
  compile / instantiate / invoke / registerController / unregisterController / state
- GlobalExceptionHandler：把 404（NoResourceFoundException）/400/500 翻成统一 JSON
- advice/LoggingAdvice + TimingAdvice + ThrowAdvice：ThrowAdvice 改为被动记录，
  让源方法自己抛异常以触发 afterThrow（AdviceInterceptor 把 before() 放在 try-catch
  之外，从 before 抛出的异常不会被 afterThrow 接住，那是核心库的实现细节）
- static/index.html + app.js + styles.css：单页 4 tab，原生 JS（fetch）
- application.yml：server.port=8080

父 pom 变更（demo 必需的基础设施）：
- maven-compiler-plugin 改用 <release>17</release> + <parameters>true</parameters>
  （demo 里 DynamicClassLoader.compileAndLoad 反射读参数名需要 -parameters）
- pluginManagement 加 spring-boot-maven-plugin（spring-boot:run 需要）
- pluginManagement 加 maven-jar-plugin 3.4.1

test 模块 pom 变更：
- starter 依赖 scope 从 test 改为 compile（demo 在 main classpath 启动）
- 加 spring-boot-starter-web（MVC + 内嵌 tomcat + jackson）
- 加 spring-boot-maven-plugin（直接 mvn -pl ... spring-boot:run）
- 删除 default-jar phase=none execution，保留 test-jar execution
  （default-jar 给 demo；test-jar 继续给消费方复用 IT 设施）

README 加"演示应用"章节：启动命令、4 tab 能力清单、关键文件树、curl 端到端示例。

Co-Authored-By: Claude <noreply@anthropic.com>